_notes/errbyfile/O000000O0O0O00.java.txt
ru\metaculture\protection\O000000O0O0O00.java:273: error: incompatible 
types: Object cannot be converted to W39
            for (O000000O0O0O00.W39 var19 : var1) {
                                            ^

ru\metaculture\protection\O000000O0O0O00.java:353: error: incompatible 
types: Object[] cannot be converted to float[][]
               float[][] var44 = var41.toArray(new float[0][]);
                                              ^

ru\metaculture\protection\O000000O0O0O00.java:354: error: incompatible 
types: Object[] cannot be converted to float[][]
               float[][] var45 = var42.toArray(new float[0][]);
                                              ^

ru\metaculture\protection\O000000O0O0O00.java:824: error: incompatible 
types: Object cannot be converted to W39
         for (O000000O0O0O00.W39 var6 : var2) {
                                        ^

ru\metaculture\protection\O000000O0O0O00.java:838: error: incompatible 
types: Object cannot be converted to W39
         for (O000000O0O0O00.W39 var10 : var2) {
                                         ^

ru\metaculture\protection\O000000O0O0O00.java:875: error: incompatible 
types: Object cannot be converted to W39
         for (O000000O0O0O00.W39 var16 : var2) {
                                         ^

ru\metaculture\protection\O000000O0O0O00.java:1417: error: incompatible 
types: Object cannot be converted to Path
               var2.filter(path -> Files.isRegularFile(path) && path.getFileName().toString().endsWith(".json"))
                                                       ^

ru\metaculture\protection\O000000O0O0O00.java:1417: error: cannot find 
symbol
               var2.filter(path -> Files.isRegularFile(path) && path.getFileName().toString().endsWith(".json"))
                                                                    ^
  symbol:   method getFileName()
  location: variable path of type Object

ru\metaculture\protection\O000000O0O0O00.java:1418: error: cannot find 
symbol
                  .forEach(path -> var0.add(O0000000000(path.getFileName().toString())));
                                                            ^
  symbol:   method getFileName()
  location: variable path of type Object

ru\metaculture\protection\O000000O0O0O00.java:1424: error: incompatible 
types: invalid method reference
      var0.sort(String::compareToIgnoreCase);
                ^
    method compareToIgnoreCase in class String cannot be applied to given types
      required: String
      found:    Object,Object
      reason: actual and formal argument lists differ in length

  ru\metaculture\protection\O000000O0O0O00.java:1417: error: cannot find 
symbol
                 var2.filter(path -> Files.isRegularFile(path) && path.getFileName().toString().endsWith(".json"))
                                                                      ^
    symbol:   method getFileName()
    location: variable path of type Object

  ru\metaculture\protection\O000000O0O0O00.java:1418: error: cannot find 
symbol
                    .forEach(path -> var0.add(O0000000000(path.getFileName().toString())));
                                                              ^
    symbol:   method getFileName()
    location: variable path of type Object

  ru\metaculture\protection\O000000O0O0O00.java:273: error: incompatible 
types: Object cannot be converted to W39
              for (O000000O0O0O00.W39 var19 : var1) {
                                              ^

  ru\metaculture\protection\O000000O0O0O00.java:353: error: incompatible 
types: Object[] cannot be converted to float[][]
                 float[][] var44 = var41.toArray(new float[0][]);
                                                ^

  ru\metaculture\protection\O000000O0O0O00.java:354: error: incompatible 
types: Object[] cannot be converted to float[][]
                 float[][] var45 = var42.toArray(new float[0][]);
                                                ^

  ru\metaculture\protection\O000000O0O0O00.java:824: error: incompatible 
types: Object cannot be converted to W39
           for (O000000O0O0O00.W39 var6 : var2) {
                                          ^

  ru\metaculture\protection\O000000O0O0O00.java:838: error: incompatible 
types: Object cannot be converted to W39
           for (O000000O0O0O00.W39 var10 : var2) {
                                           ^

  ru\metaculture\protection\O000000O0O0O00.java:875: error: incompatible 
types: Object cannot be converted to W39
           for (O000000O0O0O00.W39 var16 : var2) {
                                           ^

  ru\metaculture\protection\O000000O0O0O00.java:1417: error: incompatible 
types: Object cannot be converted to Path
                 var2.filter(path -> Files.isRegularFile(path) && path.getFileName().toString().endsWith(".json"))
                                                         ^

  ru\metaculture\protection\O000000O0O0O00.java:1424: error: incompatible 
types: invalid method reference
        var0.sort(String::compareToIgnoreCase);
                  ^
      method compareToIgnoreCase in class String cannot be applied to given types
        required: String
        found:    Object,Object
        reason: actual and formal argument lists differ in length
